--- a/demo/index.html
+++ b/demo/index.html
@@ -22,7 +22,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <link rel="import" href="../../iron-selector/iron-selector.html">
   <link rel="import" href="../../iron-flex-layout/iron-flex-layout.html">
   <link rel="import" href="../lazy-pages.html">
-
+  <link rel="import" href="../../neon-animation/animations/slide-up-animation.html">
+  <link rel="import" href="../../neon-animation/animations/slide-down-animation.html">
 
   <style is="custom-style">
 
@@ -54,7 +55,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <div>three</div>    <div>four</div>    <div>five</div>
   </iron-selector>
   <pre>selected:<span>{{selected}}</span></pre>
-  <pre>power-pages</pre>
+  <pre>lazy-pages</pre>
   <lazy-pages selected="{{selected}}">
     <template is="dom-if">
       <div>
@@ -82,6 +83,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 </template>
 
 <script>
+  document.querySelector('[is=dom-bind]').addEventListener('dom-change', function() {
+    var lp = document.querySelector('lazy-pages');
+    lp.entryAnimation = 'slide-up-animation';
+    lp.exitAnimation = 'slide-down-animation';
+  });
   // document.addEventListener('click', function(e) {
   //   var pages = document.querySelector('power-pages');
   //   pages.selectNext();
