--- a/demo/index.html
+++ b/demo/index.html
@@ -40,6 +40,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     lazy-pages > * {
       border: 1px solid black;
+      background-color: white;
+      opacity: 1;
     }
 
 
@@ -48,6 +50,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <body class="fullbleed">
 
 <template is="dom-bind">
+  <h3>Not a real demo, really a testing rig</h3>
+  <p>For better demos, see clones of neon-animation's <a href="declarative/">declarative</a>, or <a href="tiles/">tiles</a>. Orignal demos <a href='https://elements.polymer-project.org/elements/neon-animation?view=demo:demo/index.html&active=neon-animated-pages'>here</a></p>
   <pre>iron-selector</pre>
   <iron-selector selected="{{selected}}">
     <div>one</div>
