--- a/demo/index.html
+++ b/demo/index.html
@@ -50,8 +50,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <body class="fullbleed">
 
 <template is="dom-bind">
-  <h3>Not a real demo, really a testing rig</h3>
-  <p>For better demos, see clones of neon-animation's <a href="declarative/">declarative</a>, or <a href="tiles/">tiles</a>. Orignal demos <a href='https://elements.polymer-project.org/elements/neon-animation?view=demo:demo/index.html&active=neon-animated-pages'>here</a></p>
+  <p>This is a very bare demo. Additional, more colorful demos are <a href="declarative/">declarative</a>, or <a href="tiles/">tiles</a>.
+  You can compare them to original neon-animated-pages <a href='https://elements.polymer-project.org/elements/neon-animation?view=demo:demo/index.html&active=neon-animated-pages' target="_new">here</a></p>
   <pre>iron-selector</pre>
   <iron-selector selected="{{selected}}">
     <div>one</div>
