--- a/lazy-pages.html
+++ b/lazy-pages.html
@@ -2,14 +2,6 @@
 <link rel="import" href="../neon-animation/neon-animation-runner-behavior.html">
 <link rel="import" href="../neon-animation/animations/opaque-animation.html">
 <link rel="import" href="../iron-resizable-behavior/iron-resizable-behavior.html">
-<!--
-lazy-pages
-
-load the pages right away,
-or load them lazy.
-
-@demo
--->
 
 <dom-module id="lazy-pages">
   <template>
@@ -188,6 +180,69 @@ LazyTransition.prototype = {
 
 'use strict';
 
+/**
+  lazy-pages
+
+  Instead of your app
+  ```html
+  <neon-animated-pages selected="{{selected}}">
+    <landing-page></landing-page>
+    <demo-page></demo-page>
+    <contact-page></contact-page>
+  </neon-animated-pages>
+  ```
+  loading every page into DOM on startup, use `lazy-pages` to load them on demand:
+  ```html
+  <lazy-pages>
+    <!-- very-important-page is not loaded lazily -->
+    <very-important-page></very-important-page>
+
+    <template is="dom-if">
+      <!-- landing-page is displayed lazily, stays in dom once shown -->
+      <landing-page></landing-page>
+    </template>
+
+    <template is="dom-if" restamp>
+      <!-- demo-page is displayed lazily, and removed from dom when invisible -->
+      <demo-page></demo-page>
+    </template>
+
+    <template is="dom-if">
+      <!-- super-complex-page element definition is also loaded lazily -->
+      <link rel="import" href="super-complex-page.html">
+      <super-complex-page></super-complex-page>
+    </template>
+  </lazy-pages>
+
+  ```
+
+  ### Why?
+  - memory: you have lots of pages, and do not want to load them all at once on startup
+  - speed: you do not want to load all your element definitions on startup
+  - attached callbacks: you do not want all your attached callbacks to run on an initial load
+
+  ### Usage
+
+  `lazy-pages` will render just like `neon-animated-pages`. You can also use them as `iron-pages` replacement.
+
+  Put any template you'd like to load lazily inside a `dom-if` template:
+
+  ```html
+  <template is="dom-if">
+    <my-page></my-page>
+  </template>
+  ```
+
+  You can only have a single top-level tag inside a template (except for link tags). This keeps my code simple.
+
+  To load element definition lazily, put the link tag inside the template.
+
+  To remove element from dom when invisible, use `restamp` dom-if option.
+
+  `lazy-pages` has basic attribute compatibility with neon-animated-pages: `selected`, `attrForSelected`, `animateInitialSelection`.
+
+  @demo
+*/
 Polymer({
 
   is: 'lazy-pages',
@@ -200,8 +255,8 @@ Polymer({
   properties: {
 
     /**
-     * value of currentlySelectedItem[attr_for_selected],
-     * or index if attr_for_selected is undefined
+     * selected page's index, unless attrForSelected is set
+     * if attrForSelected is set, selected page's page[attrForSelected]
      */
     selected: {
       type: String,
@@ -209,6 +264,9 @@ Polymer({
       observer: '_selectedChanged'
     },
 
+    /**
+     * Modifies interpretation of `selected`. If set, value of attribute
+     */
     attrForSelected: {
       type: String,
       value: null
@@ -223,21 +281,18 @@ Polymer({
     },
 
     /**
-     * Use it to specify transition animations dynamically
+     * Use it to specify transition animations dynamically.
+     * Function should return
      *
-     * @type Function(entryPage, exitPage, entryInstance, exitInstance)
+     * Function(entryPage, exitPage, entryInstance, exitInstance)
      */
      animationOracle: {
       type: Function
      }
   },
 
-  observers: [
-     // '_updateSelection(selected, attrForSelected)'
-  ],
-
   /**
-   * Currently selected page
+   * @return {Node} Currently selected page
    */
   get selectedPage() {
     return this._currentPage;
@@ -257,10 +312,6 @@ Polymer({
       }
     }
   },
-
-  // _updateSelection: function(selected, attrForSelected) {
-  //   this._selectedChanged(selected);
-  // },
 
   /**
    * @return an array of selectable nodes
@@ -383,10 +434,8 @@ Polymer({
       // console.log('canceling transition', this._lazyTransition);
       this._lazyTransition.stop();
     }
-    // else {
-      this._lazyTransition = new LazyTransition(this);
-      this._lazyTransition.start(page, this._currentPage);
-    // }
+    this._lazyTransition = new LazyTransition(this);
+    this._lazyTransition.start(page, this._currentPage);
   },
 
   /**
