--- a/demo/declarative/index.html
+++ b/demo/declarative/index.html
@@ -9,7 +9,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <html>
   <head>
-    <title>lazy-animated-pages demo: declarative</title>
+    <title>lazy-pages demo: declarative</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
