--- a/test/index.html
+++ b/test/index.html
@@ -22,8 +22,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <script>
 
       WCT.loadSuites([
-        'basic.html',
-        // 'attr-for-selected.html'
+        'basic.html'
       ]);
 
     </script>
